--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chọn đường dẫn và tên file</title>
+    <title>Báo cáo project 1</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
